# ihistory

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
demo/: .zshrc  demo.tape  setup.sh
shell/: ihistory.bash  ihistory.sh  ihistory.zsh
src/: alias.rs  app.rs  history.rs  main.rs  search.rs  ui.rs
