[package]
name = "ihistory"
version = "0.1.0"
edition = "2021"
description = "A minimal, fast, fuzzy shell history search tool"
license = "MIT"
authors = ["Kirill Ragozin"]
repository = "https://github.com/jazzjackrabbit/ihistory"
readme = "README.md"
keywords = ["shell", "history", "fuzzy", "search", "tui"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
fuzzy-matcher = "0.3"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
chrono = "0.4"
textwrap = "0.16"
arboard = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
